issue-821-migrated-test-failure.txt

[1m[30m[46m RUN [49m[39m[22m [36mv4.1.10 [39m[90m/home/runner/work/orchestrator-pack/orchestrator-pack[39m

 [31m❯[39m scripts/worker-nudge-gate.test.ts [2m([22m[2m89 tests[22m[2m | [22m[31m1 failed[39m[2m | [22m[33m88 skipped[39m[2m)[22m[33m 1909[2mms[22m[39m
     [2m[90m↓[39m[22m exports stable gate capability markers
     [2m[90m↓[39m[22m classifies incident surfaces into review-findings
     [2m[90m↓[39m[22m maps unknown phrasing to unknown-worker-nudge
     [2m[90m↓[39m[22m allows materially new message content for an already-served tuple with escalation
     [2m[90m↓[39m[22m normalizes invalid explicit intent hints to unknown-worker-nudge via classifier
     [2m[90m↓[39m[22m derives same cycle keys for review-findings from two callers
     [2m[90m↓[39m[22m canonicalizes WSL and Windows store path strings to one id
     [2m[90m↓[39m[22m script-recorded tuple suppresses LLM-turn nudge for same tuple
     [2m[90m↓[39m[22m classifies review-finding-delivery-confirm as review-findings-redelivery
     [2m[90m↓[39m[22m derives per-attempt redelivery cycle keys distinct from first findings-delivery send
     [2m[90m↓[39m[22m allows redelivery claim after first findings-delivery tuple is terminal SENT
     [2m[90m↓[39m[22m does not suppress distinct intent-class in same cycle
     [2m[90m↓[39m[22m reverse symmetry: LLM-recorded tuple suppresses script path
     [2m[90m↓[39m[22m maps unclassified verifiable legacy records to review-findings
     [2m[90m↓[39m[22m verifiable legacy #332 record suppresses equivalent nudge; unverifiable does not
     [2m[90m↓[39m[22m allows gate retry when only FAILED_DEFINITIVE terminal claim exists
     [2m[90m↓[39m[22m still suppresses when SENT terminal exists even if FAILED_DEFINITIVE is listed first
     [2m[90m↓[39m[22m FAILED_DEFINITIVE finalize is retryable; UNCERTAIN is not
     [2m[90m↓[39m[22m fail-closed when state is unreadable
     [2m[90m↓[39m[22m escalates claim-store failures after bounded unresolved count
     [2m[90m↓[39m[22m rejects forged journaled internal capability tokens
     [2m[90m↓[39m[22m structured audit requires binding fields
     [2m[90m↓[39m[22m denies raw worker send at autonomous boundary
     [2m[90m↓[39m[22m preflight fails closed when the daemon session capability is missing
     [2m[90m↓[39m[22m preflight passes with the AO 0.10.2 in-process capability inventory
     [2m[90m↓[39m[22m adoption gate degrades when gated command missing
     [2m[90m↓[39m[22m never leaves two active claim records for one tuple under overlap
     [2m[90m↓[39m[22m concurrent same-tuple resolves to one winner
     [2m[90m↓[39m[22m rejects journaled send without claim token
[31m     [31m×[31m rejects ungated journaled send on autonomous surface[39m[33m 1908[2mms[22m[39m
     [2m[90m↓[39m[22m autonomous guard allows registered journaled transport internal capability
     [2m[90m↓[39m[22m rejects forged AO_JOURNALED_SEND_INTERNAL bypass
     [2m[90m↓[39m[22m rejects capability registration outside journaled transport
     [2m[90m↓[39m[22m rejects capability registration from a forged journaled-worker-send script path
     [2m[90m↓[39m[22m resolves trusted journaled-worker-send path to the pack script
     [2m[90m↓[39m[22m Split-ProcessCommandLineTokens return-shape: Get-ScriptPathsFromProcessCommandLine finds -File path
       [2m[90m↓[39m[22m forged unregistered internal capability token is internal capability deny exit 93
       [2m[90m↓[39m[22m replayed internal capability nonce is internal capability deny exit 93
     [2m[90m↓[39m[22m rejects well-formed but unregistered journaled internal capability tokens
     [2m[90m↓[39m[22m persists messageContentHash on active claim through terminal finalize
     [2m[90m↓[39m[22m reacquires after terminal FAILED_DEFINITIVE claim
     [2m[90m↓[39m[22m does not reacquire after terminal SENT claim
     [2m[90m↓[39m[22m persists SEND_ATTEMPTED on gated claim before transport
     [2m[90m↓[39m[22m rejects forged claim tokens bound to writable paths outside the canonical store
     [2m[90m↓[39m[22m rejects replayed claim tokens after send begins
     [2m[90m↓[39m[22m rejects claim token when send session does not match token session
     [2m[90m↓[39m[22m releases active claim when message hash persistence fails
     [2m[90m↓[39m[22m invoke-gated-worker-nudge releases claim on message hash persist failure
     [2m[90m↓[39m[22m finalizes gated claim when transport preflight fails
     [2m[90m↓[39m[22m resolves head owner when multiple PR sessions exist
     [2m[90m↓[39m[22m rejects supplied session when it does not own head
     [2m[90m↓[39m[22m fails closed when multiple issue-only workers match the same PR without head owner
     [2m[90m↓[39m[22m matches PR ownership fallback only when session pr URL equals requested PR
     [2m[90m↓[39m[22m recovers CLAIMED records immediately after lease expiry
   [2m[90m↓[39m[22m uses PS 5.1-compatible claim overwrite without File.Move(source, dest, overwrite)
   [2m[90m↓[39m[22m retires invoke-gated-worker-nudge ci-failure arm (Issue #645)
   [2m[90m↓[39m[22m resolves ci-failure headSha from episodeKey when headSha is omitted
   [2m[90m↓[39m[22m resolves openPrs headSha before ci-failure tuple derivation
   [2m[90m↓[39m[22m fail-closes ci-failure gate when headSha cannot be resolved from episodeKey
   [2m[90m↓[39m[22m resolves worker target before deriving fallback cycles
   [2m[90m↓[39m[22m keeps PR-claim target resolution fail-closed on the gated invoke path
   [2m[90m↓[39m[22m derives liveness cycle keys after worker target is populated
   [2m[90m↓[39m[22m preserves live mutex after stale threshold when owner PID is alive
   [2m[90m↓[39m[22m recovers stale issue-ownership legacy lock files and mutex dirs
   [2m[90m↓[39m[22m uses claim mutex for issue-owner bootstrap locking
   [2m[90m↓[39m[22m routes gated transport to PR-resolved owner session
   [2m[90m↓[39m[22m treats journaled journal-update failure as uncertain claim outcome
   [2m[90m↓[39m[22m treats ci-green journaled journal-update failure as uncertain claim outcome
   [2m[90m↓[39m[22m resolves reconcile script tuples from PR ownership claim
   [2m[90m↓[39m[22m does not register dispatch journal twice after journaled CI-green send
   [2m[90m↓[39m[22m persists CI-green message hashes before journaled send
   [2m[90m↓[39m[22m passes GatedNudge marker from ci-green wake journaled send
     [2m[90m↓[39m[22m loads capture-backed fixture and collapses duplicate review-findings nudges
     [2m[90m↓[39m[22m escalates persistent claim-store failures from invoke path
     [2m[90m↓[39m[22m infers resume lineage from same worktree plus restoredAt signal
     [2m[90m↓[39m[22m does not infer resume lineage for same-worktree replacement without resume signal
     [2m[90m↓[39m[22m keeps generation only when resume lineage is explicitly signaled
     [2m[90m↓[39m[22m bumps generation for replacement on the same worktree
     [2m[90m↓[39m[22m bumps generation for replacement claim-pr ownership
     [2m[90m↓[39m[22m does not suppress replacement generation after prior tuple was served
     [2m[90m↓[39m[22m passes Test-WorkerNudgeGateWiring for every sender surface
     [2m[90m↓[39m[22m review-send-reconcile is REMOVED on AO 0.10 (auto-delivery)
     [2m[90m↓[39m[22m converges already-served ci-failure claim skips for SENT and UNCERTAIN phases
     [2m[90m↓[39m[22m reuses pre-registered delivery id for ci-failure journaled sends
     [2m[90m↓[39m[22m binds claim tokens to the selected project namespace
     [2m[90m↓[39m[22m binds claim tokens to the canonical claim store
     [2m[90m↓[39m[22m requires claim gating on all worker-observable senders
     [2m[90m↓[39m[22m maps equivalent AO_WORKER_NUDGE_CLAIM_DIR forms to one physical namespace
     [2m[90m↓[39m[22m clamps AO_WORKER_NUDGE_CLAIM_LEASE_MS above report-stale bound

[31m⎯⎯⎯⎯⎯⎯⎯[39m[1m[41m Failed Tests 1 [49m[22m[31m⎯⎯⎯⎯⎯⎯⎯[39m

[41m[1m FAIL [22m[49m scripts/worker-nudge-gate.test.ts[2m > [22mWorker-NudgeClaim single-flight contract[2m > [22mrejects ungated journaled send on autonomous surface
[31m[1mSyntaxError[22m: Expected ',' or ']' after array element in JSON at position 5 (line 1 column 6)[39m
[36m [2m❯[22m scripts/worker-nudge-gate.test.ts:[2m576:25[22m[39m
    [90m574|[39m       [pscustomobject]@{ status = $LASTEXITCODE } | ConvertTo-Json -Co…
    [90m575|[39m     `[39m[33m;[39m
    [90m576|[39m     [35mconst[39m result [33m=[39m [33mJSON[39m[33m.[39m[34mparse[39m([34mrunPwsh[39m(script))[33m;[39m
    [90m   |[39m                         [31m^[39m
    [90m577|[39m     [34mexpect[39m(result[33m.[39mstatus)[33m.[39m[34mtoBe[39m([34m46[39m)[33m;[39m
    [90m578|[39m   })[33m;[39m

[31m[2m⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯[22m[39m


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m1 failed[39m[22m[2m | [22m[33m88 skipped[39m[90m (89)[39m
[2m   Start at [22m 11:20:43
[2m   Duration [22m 6.80s[2m (transform 330ms, setup 47ms, import 378ms, tests 1.91s, environment 0ms)[22m


::error file=/home/runner/work/orchestrator-pack/orchestrator-pack/scripts/worker-nudge-gate.test.ts,title=scripts/worker-nudge-gate.test.ts > Worker-NudgeClaim single-flight contract > rejects ungated journaled send on autonomous surface,line=576,column=25::SyntaxError: Expected ',' or ']' after array element in JSON at position 5 (line 1 column 6)%0A ❯ scripts/worker-nudge-gate.test.ts:576:25%0A%0A
